examples/test/testpolicy2445.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2445
  namespace: namespace482
spec:
  podSelector:
    matchLabels:
      key41: value1
      key30: value4
      key28: value11
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value48
          key17: value26
          key30: value40
      podSelector:
        matchLabels:
          key5: value20
          key37: value22
          key7: value2
